feat: add grpc primary adapter (#37)
* chore: parametrise db pool connection settings and use k6 for benchmarks instead of ab

* feat: return restaurantId for new created ones

* fix: RestaurantNotFoundError doesn't really need an error message because the type is self explanatory

* fix: don't return a response body when a 404 is returned

* chore: print the service type at startup

* chore: allow print additional info at startup in the banner

* chore: define a complete use case

* feat: add gRPC primary adapter

* chore: add grpc tools to the tools package

* chore: install protoc
